[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/dynamo_utils/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [ "src/dynamo_utils" ]

[project]
name = "dynamo-utils"
dynamic = ["version"]
authors = [
    { name = "Truman Mulholland", email = "truman.mulholland@gmail.com" }
]
description = "Utilities for my Discord bot"
license = { text = "Unlicense" }
readme = "README.md"
requires-python = ">=3.13,<3.14"
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13"
]
urls = {  "Homepage" = "https://github.com/trumully/dynamo-utils", "Issue Tracker" = "https://github.com/trumully/dynamo-utils/issues", "Source Code" = "https://github.com/trumully/dynamo-utils" }

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
xfail_strict = true
testpaths = [
    "tests",
]

addopts = [
    "--strict-markers",
    "--strict-config",
    "--maxfail",
    "1",
    "--verbosity",
    "2",
]


[tool.ruff]
src = [
    "dynamo",
]
target-version = "py313"
line-length = 120
preview = true

[tool.ruff.lint]
select = [
    "A", "ANN", "ASYNC", "B", "BLE", "C4", "COM", "DTZ", "E",
    "EM", "ERA", "F", "FA", "FURB", "G", "I", "INP", "ISC", "NPY",
    "PD", "PERF", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PTH", "PYI",
    "Q", "Q003", "RET", "RSE", "RUF", "S", "SIM", "SLOT", "T20", "TC", "TID",
    "TRY", "UP", "YTT"
]

ignore = [
    "ANN401",  # Any is correct in some cases
    "ANN204",  # Return type for some dunders is cumbersome
    "D1",  # Well named items don't need docstrings
    "E501",  # Ruff handles this 
    "PLW3201",  # I want some dunders that have no "special meaning"
    "RET504",  # A bit too opinionated 
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "RUF029",  # Some interfaces need an async method
    "S101",  # Allow assert
    "PLC0415",  # Top-of-file imports are not always best
]

unfixable = [
    "E501",  # Handled by ruff format
    "F841", # I'm planning to use it
    "ERA",  # Allow commented code
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLC1901", "PLR2004", "PLR6301", "S", "TID252"
]

[tool.ruff.lint.pydocstyle]
convention = "google"
"ignore-decorators" = [
    "typing.overload",
]


[tool.ruff.lint.flake8-tidy-imports.banned-api]
# https://discuss.python.org/t/problems-with-typeis/55410/6
# https://discuss.python.org/t/problems-with-typeis/55410/46
# Until what can go into a TypeIs/TypeGuard changes, these are just dangerous.

"typing.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing.TypeGuard".msg = "TypeGuard is fundamentally unsafe"
"typing_extensions.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing_extensions.TypeGuard".msg = "TypeGuard is fundamentally unsafe"


[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
]
pythonVersion = "3.13"
typeCheckingMode = "strict"
pythonPlatform = "All"
reportImportCycles = "error"
reportPropertyTypeMismatch = "error"
reportShadowedImports = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
reportInvalidTypeForm = "information"
